# todoclist

./: README.md  pyproject.toml
todoclist/scripts/: todoclist.py
